// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Front component built JS endpoint should return 404 for a non-existent front component ID 1`] = `
{
  "body": {
    "code": "FRONT_COMPONENT_NOT_FOUND",
    "error": "Error",
    "messages": [
      "Front component not found",
    ],
    "statusCode": 404,
  },
  "status": 404,
}
`;

exports[`Front component built JS endpoint should return 404 when front component exists but built file is missing on storage 1`] = `
{
  "body": {
    "code": "FRONT_COMPONENT_NOT_FOUND",
    "error": "Error",
    "messages": [
      "Front component built file not found",
    ],
    "statusCode": 404,
  },
  "status": 404,
}
`;
